--- a/.github/gitversion.yml
+++ b/.github/gitversion.yml
@@ -1,7 +1,15 @@
-mode: Mainline
+next-version: 1.0.0
+tag-prefix: '[vV]'
+mode: ContinuousDeployment
 branches:
-  pre-release:
+  master:
+    regex: ^master$
+  release:
+    regex: ^release$
+  develop:
+    regex: ^develop$|^dev$
     tag: beta
-  master: {}
+  pull-request:
+    tag: beta
 ignore:
   sha: []
