--- a/.github/workflows/CI-Build.yml
+++ b/.github/workflows/CI-Build.yml
@@ -21,6 +21,7 @@ jobs:
         env:
           VALIDATE_ALL_CODEBASE: false
           FILTER_REGEX_INCLUDE: .*src/.*
+          FILTER_REGEX_EXCLUDE: .*src/.xsd
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: '${{ env.github-token }}'
   Build-Beta:
