--- a/src/Secure.SAML/Secure.SAML.csproj
+++ b/src/Secure.SAML/Secure.SAML.csproj
@@ -3,14 +3,41 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <OutputType>Library</OutputType>
+    <ImplicitUsings>disable</ImplicitUsings>
+    <Nullable>disable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
+    <GeneratedAssemblyInfoFile>AssemblyInfo.cs</GeneratedAssemblyInfoFile>
+    <PackRelease>true</PackRelease>
+    <IsPackable>true</IsPackable>
     <AssemblyTitle>Secure.SAML</AssemblyTitle>
     <RepositoryUrl>https://github.com/ninjarocks/Secure.SAML</RepositoryUrl>
     <Product>Secure.SAML</Product>
     <Copyright>© Copyright 2023 Ninja Sha!4h.</Copyright>
     <Company>NinjaCorp Ltd.</Company>
     <RepositoryUrl>https://github.com/ninjarocks/Secure.SAML</RepositoryUrl>
+    <Title>Secure.SAML</Title>
+    <PackageProjectUrl></PackageProjectUrl>
+    <Description>.Net Standard 2.1 library to generate SAML 2.0 as XMLDocument or Base64Encoded string.</Description>
+    <PackageTags>SAML; SAML Response; SHA1 SAML; SHA256 SAML; SHA512 SAML; SAML Assertion;</PackageTags>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <PackageIcon>ninja-icon-16.png</PackageIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\ninja-icon-16.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
   
+<ItemGroup>
+    <None Include="..\..\..\..\..\Users\najaf\Pictures\ninja-icon-16.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>  
   <ItemGroup>
     <PackageReference Include="System.Security.Cryptography.Xml" Version="7.0.1" />
   </ItemGroup>
