- release check point

--- a/.github/workflows/CI-Build.yml
+++ b/.github/workflows/CI-Build.yml
@@ -146,10 +146,9 @@ jobs:
 
       - name: Step-03 Publish to Github Packages
         run: find -name "*.nupkg" -print -exec gpr push -k ${{env.github-token}} {} \;
-
   Release:
     needs: [Package-Artifacts]
-    if:  startsWith(github.head_ref, 'release/')
+    if: startsWith(github.ref, 'refs/tags/release/')
     runs-on: ubuntu-latest
     env:
       nuget-token: '${{ secrets.NUGET_API_KEY }}'      
