--- a/.github/workflows/CI-Build.yml
+++ b/.github/workflows/CI-Build.yml
@@ -148,7 +148,9 @@ jobs:
         run: find -name "*.nupkg" -print -exec gpr push -k ${{env.github-token}} {} \;
   Release:
     needs: [Package-Artifacts]
-    if: ${{ startsWith(github.ref, 'release/') }}
+    if: |
+      success('Package-Artifacts') &&
+      ${{ startsWith(github.head_ref, 'release/') }}
     runs-on: ubuntu-latest
     env:
       nuget-token: '${{ secrets.NUGET_API_KEY }}'      
