--- a/.github/workflows/CI-Build.yml
+++ b/.github/workflows/CI-Build.yml
@@ -20,8 +20,8 @@ jobs:
         uses: github/super-linter@v4
         env:
           VALIDATE_ALL_CODEBASE: false
-          FILTER_REGEX_EXCLUDE: .*src/Secure.SAML/v2/Xsds/.*
           FILTER_REGEX_INCLUDE: .*src/.*
+          FILTER_REGEX_EXCLUDE: .*xsds/.*         
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: '${{ env.github-token }}'
   Build-Beta:
@@ -146,10 +146,11 @@ jobs:
 
       - name: Step-03 Publish to Github Packages
         run: find -name "*.nupkg" -print -exec gpr push -k ${{env.github-token}} {} \;
-
   Release:
     needs: [Package-Artifacts]
-    if:  startsWith(github.head_ref, 'release/')
+    if: |
+      success('Package-Artifacts') &&
+      ${{ startsWith(github.head_ref, 'release/') }}
     runs-on: ubuntu-latest
     env:
       nuget-token: '${{ secrets.NUGET_API_KEY }}'      
