--- a/src/Secure.SAML/Secure.SAML.csproj
+++ b/src/Secure.SAML/Secure.SAML.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <OutputType>Library</OutputType>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
@@ -21,16 +21,17 @@
     <Description>.Net library to generate signed SAML 2.0 Response.</Description>
     <PackageTags>SAML; SAML Response; SHA1 SAML; SHA256 SAML; SHA512 SAML; SAML Assertion;</PackageTags>
     <AssemblyVersion>1.0.5</AssemblyVersion>
-    <Version>1.0.5</Version>
+    <Version>2.0.0</Version>
     <PackageIcon>ninja-icon-16.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryType>GIT</RepositoryType>
-    <PackageReleaseNotes>Release Notes : SAML utility to create SAML 2.0 Response
-* Supported Signing Algorithms - SHA1, SHA256, SHA512
-* Signs Assertion or Response.
-* Outputs Base64string or XMLDocument.</PackageReleaseNotes>
+    <PackageReleaseNotes>Release Notes:
+    .Net utility to create SAML 2.0 Response
+      * Supported Signing Algorithms - SHA1, SHA256, SHA512
+      * Signs Assertion or Response.
+      * Outputs Base64 string or XMLDocument.</PackageReleaseNotes>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <FileVersion>1.0.5</FileVersion>
+    <FileVersion>2.0.0</FileVersion>
     <PackAsTool>False</PackAsTool>
   </PropertyGroup>
 
